--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "test": "c8 mocha",
+    "test": "c8 mocha -i -g Integration",
+    "integration-ci": "c8 mocha -g Integration",
     "lint": "eslint .",
     "semantic-release": "semantic-release",
     "semantic-release-dry": "semantic-release --dry-run --branches $CI_BRANCH",
@@ -33,6 +34,7 @@
     "@semantic-release/git": "10.0.1",
     "@semantic-release/npm": "11.0.2",
     "c8": "9.1.0",
+    "dotenv": "16.4.5",
     "eslint": "8.56.0",
     "fs-extra": "11.2.0",
     "husky": "8.0.3",
@@ -52,6 +54,7 @@
     "@adobe/fastly-native-promises": "^3.0.10",
     "@fastly/js-compute": "^3.16.0",
     "chalk-template": "^1.1.0",
-    "tar": "^7.4.0"
+    "tar": "^7.4.0",
+    "webpack": "^5.92.1"
   }
 }
