--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@adobe/fastly-native-promises": "^3.0.10",
     "@fastly/js-compute": "^3.16.0",
     "chalk-template": "^1.1.0",
-    "tar": "^7.4.0",
-    "webpack": "^5.92.1"
+    "constants-browserify": "1.0.0",
+    "tar": "^7.4.0"
   }
 }
