--- a/package.json
+++ b/package.json
@@ -41,14 +41,15 @@
     "lint-staged": "15.2.0",
     "mocha": "10.2.0",
     "mocha-multi-reporters": "1.5.1",
-    "semantic-release": "22.0.12"
+    "semantic-release": "22.0.12",
+    "yauzl": "3.1.3"
   },
   "lint-staged": {
     "*.js": "eslint",
     "*.cjs": "eslint"
   },
   "peerDependencies": {
-    "@adobe/helix-deploy": "^11.1.15"
+    "@adobe/helix-deploy": "^12.0.0-pre.1"
   },
   "dependencies": {
     "@adobe/fastly-native-promises": "^3.0.10",
