--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@adobe/helix-deploy-fastly-compute",
+  "name": "@adobe/helix-deploy-plugin-edge",
   "version": "0.0.1",
-  "description": "Helix Deploy - Fastly Compute Plugin",
+  "description": "Helix Deploy - Plugin for Edge Compute",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
@@ -42,6 +42,7 @@
     "lint-staged": "15.2.0",
     "mocha": "10.2.0",
     "mocha-multi-reporters": "1.5.1",
+    "nock": "13.5.4",
     "semantic-release": "22.0.12",
     "yauzl": "3.1.3"
   },
@@ -50,13 +51,14 @@
     "*.cjs": "eslint"
   },
   "peerDependencies": {
-    "@adobe/helix-deploy": "^12.0.0-pre.1"
+    "@adobe/helix-deploy": "^12.0.0-pre.2"
   },
   "dependencies": {
     "@adobe/fastly-native-promises": "^3.0.10",
     "@fastly/js-compute": "^3.16.0",
     "chalk-template": "^1.1.0",
     "constants-browserify": "1.0.0",
+    "form-data": "4.0.0",
     "tar": "^7.4.0"
   }
 }
