--- a/package.json
+++ b/package.json
@@ -51,14 +51,14 @@
     "*.cjs": "eslint"
   },
   "peerDependencies": {
-    "@adobe/helix-deploy": "^12.0.0-pre.2"
+    "@adobe/helix-deploy": "^12.0.0"
   },
   "dependencies": {
     "@adobe/fastly-native-promises": "^3.0.10",
-    "@fastly/js-compute": "^3.16.0",
-    "chalk-template": "^1.1.0",
+    "@fastly/js-compute": "3.16.0",
+    "chalk-template": "1.1.0",
     "constants-browserify": "1.0.0",
     "form-data": "4.0.0",
-    "tar": "^7.4.0"
+    "tar": "7.4.0"
   }
 }
