--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@adobe/helix-deploy-fastly-compute",
-  "version": "0.0.1",
-  "description": "Helix Deploy - Fastly Compute Plugin",
+  "name": "@adobe/helix-deploy-plugin-edge",
+  "version": "0.0.3",
+  "description": "Helix Deploy - Plugin for Edge Compute",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "test": "c8 mocha",
+    "test": "c8 mocha -i -g Integration",
+    "integration-ci": "c8 mocha -g Integration",
     "lint": "eslint .",
-    "docs": "npx jsdoc2md -c .jsdoc.json --files 'src/*.js' > docs/API.md",
     "semantic-release": "semantic-release",
     "semantic-release-dry": "semantic-release --dry-run --branches $CI_BRANCH",
     "prepare": "husky install"
@@ -30,21 +30,35 @@
   },
   "devDependencies": {
     "@adobe/eslint-config-helix": "2.0.5",
+    "@adobe/fetch": "^4.1.8",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/npm": "11.0.2",
     "c8": "9.1.0",
+    "dotenv": "16.4.5",
     "eslint": "8.56.0",
+    "fs-extra": "11.2.0",
     "husky": "8.0.3",
-    "jsdoc-to-markdown": "8.0.0",
-    "junit-report-builder": "3.1.0",
     "lint-staged": "15.2.0",
     "mocha": "10.2.0",
     "mocha-multi-reporters": "1.5.1",
-    "semantic-release": "22.0.12"
+    "nock": "13.5.4",
+    "semantic-release": "22.0.12",
+    "yauzl": "3.1.3"
   },
   "lint-staged": {
     "*.js": "eslint",
     "*.cjs": "eslint"
+  },
+  "peerDependencies": {
+    "@adobe/helix-deploy": "^12.0.0"
+  },
+  "dependencies": {
+    "@adobe/fastly-native-promises": "^3.0.10",
+    "@fastly/js-compute": "3.16.0",
+    "chalk-template": "1.1.0",
+    "constants-browserify": "1.0.0",
+    "form-data": "4.0.0",
+    "tar": "7.4.0"
   }
 }
