--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@adobe/eslint-config-helix": "2.0.9",
-    "@adobe/fetch": "^4.1.8",
+    "@adobe/fetch": "4.2.0",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/npm": "12.0.1",
@@ -54,7 +54,7 @@
     "@adobe/helix-deploy": "^12.0.0"
   },
   "dependencies": {
-    "@adobe/fastly-native-promises": "^3.0.10",
+    "@adobe/fastly-native-promises": "3.0.12",
     "@fastly/js-compute": "3.34.0",
     "chalk-template": "1.1.0",
     "constants-browserify": "1.0.0",
