chore: add @adobe/helix-deploy to workflow, install latest version of peer dependency

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,6 +16,7 @@ jobs:
         with:
           node-version: '22.x'
       - run: npm ci
+      - run: npm install @adobe/helix-deploy
       - run: npm run lint
       - run: npm test
       - uses: codecov/codecov-action@v4
