--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@adobe/eslint-config-helix": "2.0.9",
-    "@adobe/fetch": "^4.1.8",
+    "@adobe/fetch": "4.2.0",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/npm": "12.0.1",
@@ -55,7 +55,7 @@
   },
   "dependencies": {
     "@adobe/fastly-native-promises": "3.0.12",
-    "@fastly/js-compute": "3.33.4",
+    "@fastly/js-compute": "3.34.0",
     "chalk-template": "1.1.0",
     "constants-browserify": "1.0.0",
     "form-data": "4.0.2",
