--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
   "devDependencies": {
     "@adobe/eslint-config-helix": "3.0.4",
     "@adobe/fetch": "^4.1.8",
+    "@eslint/config-helpers": "0.2.3",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/npm": "12.0.1",
     "c8": "10.1.3",
     "dotenv": "16.5.0",
-    "eslint": "8.57.1",
+    "eslint": "9.4.0",
     "fs-extra": "11.3.0",
     "husky": "9.1.7",
     "lint-staged": "16.1.2",
