--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "*.cjs": "eslint"
   },
   "peerDependencies": {
-    "@adobe/helix-deploy": "^12.0.0 || ^13.0.0"
+    "@adobe/helix-deploy": "^12.0.0 || ^13.0.0",
+    "@adobe/helix-deploy-plugin-webpack": "^1.0.2"
   },
   "dependencies": {
     "@adobe/fastly-native-promises": "3.0.15",
