feat: populate context.func.name in Cloudflare adapter
- extract worker name from request URL hostname (e.g., 'simple-package--simple-project')
- use real Cloudflare Workers API instead of made-up environment variables
- provide consistent context.func.name behavior across both platforms
- improve debugging by showing meaningful function identifiers in responses
- fallback to 'cloudflare-worker' if URL parsing fails
- update integration tests to expect correct function names
- both platforms now show function identifiers: Fastly (service ID), Cloudflare (worker name)
- fix linting issues: line length, unused variables, console statements

Signed-off-by: Lars Trieloff <lars@trieloff.net>

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "c8 --exclude 'test/fixtures/**' mocha -i -g Integration",
     "integration-ci": "c8 --exclude 'test/fixtures/**' mocha -g Integration",
+    "edge-integration": "c8 --exclude 'test/fixtures/**' mocha test/edge-integration.test.js",
     "lint": "eslint .",
     "semantic-release": "semantic-release",
     "semantic-release-dry": "semantic-release --dry-run --branches $CI_BRANCH",
