fix: improve coverage reporting in CI to include all tests
- combine unit and integration test coverage in single CI run
- fix CacheOverride import issue in edge-action fixture with mock fallback
- clean up temporary test files that had old imports
- add test-all npm script for running all tests with combined coverage
- move codecov upload after all tests complete to capture full coverage
- increase coverage from 18% to ~71% by including integration test coverage
- resolve issue where codecov only received unit test coverage

Signed-off-by: Lars Trieloff <lars@trieloff.net>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,16 +24,19 @@ jobs:
       - run: npm ci
       - run: npm install @adobe/helix-deploy
       - run: npm run lint
-      - run: npm test
-      - uses: codecov/codecov-action@v5
-        with:
-          flags: unittests
-          token: ${{ secrets.CODECOV_TOKEN }}
 
-      - run: npm run integration-ci
+      # Run all tests with combined coverage reporting
+      - name: Run all tests with coverage
+        run: npm run test-all
         env:
           HLX_FASTLY_AUTH: ${{ secrets.HLX_FASTLY_AUTH }}
           CLOUDFLARE_AUTH: ${{ secrets.CLOUDFLARE_AUTH }}
+
+      # Upload combined coverage after all tests complete
+      - uses: codecov/codecov-action@v5
+        with:
+          flags: unittests,integration
+          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Semantic Release (Dry Run)
         run: npm run semantic-release-dry
