--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "c8 --exclude 'test/fixtures/**' mocha -i -g Integration",
+    "test-all": "c8 --exclude 'test/fixtures/**' mocha",
     "integration-ci": "c8 --exclude 'test/fixtures/**' mocha -g Integration",
     "edge-integration": "c8 --exclude 'test/fixtures/**' mocha test/edge-integration.test.js",
     "lint": "eslint .",
