refactor: simplify CI workflow and remove unnecessary documentation
- remove TEST_COVERAGE.md file (redundant with actual test files)
- remove test-all npm script (unnecessary complexity)
- update CI to run npm test and npm run integration-ci separately
- maintain separate coverage collection for unit and integration tests
- upload combined coverage to codecov after both test runs complete
- cleaner separation of concerns between unit and integration testing

Signed-off-by: Lars Trieloff <lars@trieloff.net>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,9 +25,13 @@ jobs:
       - run: npm install @adobe/helix-deploy
       - run: npm run lint
 
-      # Run all tests with combined coverage reporting
-      - name: Run all tests with coverage
-        run: npm run test-all
+      # Run unit tests with coverage
+      - name: Run unit tests
+        run: npm test
+
+      # Run integration tests with coverage
+      - name: Run integration tests
+        run: npm run integration-ci
         env:
           HLX_FASTLY_AUTH: ${{ secrets.HLX_FASTLY_AUTH }}
           CLOUDFLARE_AUTH: ${{ secrets.CLOUDFLARE_AUTH }}
